[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-universal-video-io"
version = "0.2.0"
description = "ComfyUI custom nodes for universal video import/export workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Universal Video IO" }]
dependencies = [
  "imageio>=2.34.0",
  "imageio-ffmpeg>=0.5.1",
  "numpy>=1.24.0",
  "torch>=2.0.0",
]

[project.urls]
Repository = "https://github.com/GeekatplayStudio/ComfyUI-UniversalVideoIO"

[tool.comfy]
PublisherId = "TODO_FILL_REGISTRY_PUBLISHER_ID"
DisplayName = "ComfyUI-UniversalVideoIO"
Icon = "https://raw.githubusercontent.com/GeekatplayStudio/ComfyUI-UniversalVideoIO/main/assets/icon.png"

[tool.setuptools]
py-modules = ["__init__"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "nodes*"]
